--- a/lomiri-settings-components/PKGBUILD
+++ b/lomiri-settings-components/PKGBUILD
@@ -1,9 +1,9 @@
 # Maintainer: Ivan Semkin (ivan at semkin dot ru)
 
-pkgname=lomiri-settings-components-git
+pkgname=lomiri-settings-components
 _pkgname=lomiri-settings-components
-pkgver=r897.41d8ca7
-pkgrel=1
+pkgver=1.1.2
+pkgrel=0
 pkgdesc='Ubuntu settings components for Unity8'
 url='https://gitlab.com/ubports/development/core/lomiri-settings-components'
 arch=(x86_64 i686 armv7h aarch64)
@@ -12,32 +12,32 @@ conflicts=(settings-components)
 provides=(settings-components lomiri-settings-components)
 depends=(xorg-server-xvfb qt5-quickcontrols)
 makedepends=(git cmake cmake-extras)
-source=('git+https://gitlab.com/ubports/development/core/lomiri-settings-components.git')
-sha256sums=('SKIP')
+source=('https://gitlab.com/ubports/development/core/lomiri-settings-components/-/archive/1.1.2/lomiri-settings-components-1.1.2.tar.gz')
+sha256sums=('08634284a29be31bc515c156ec2056d7167b141fd6fc943da1ffec1728f98c58')
 
 BUILDENV+=('!check') # https://paste.ubuntu.com/p/gsfv2YX6Z5/
 BUILD_DIR=build
 
-pkgver() {
-  cd ${_pkgname}
-  echo "r$(git rev-list --count HEAD).$(git describe --always)"
-}
+# pkgver() {
+#   cd ${_pkgname}
+#   echo "r$(git rev-list --count HEAD).$(git describe --always)"
+# }
 
 build() {
-  cd ${_pkgname}
+  cd ${_pkgname}-${pkgver}
   mkdir -p ${BUILD_DIR}
   cd ${BUILD_DIR}
-  cmake -DCMAKE_INSTALL_PREFIX:PATH=/usr -DCMAKE_INSTALL_LIBDIR="lib/" ..
-  make
+  cmake -DCMAKE_POLICY_VERSION_MINIMUM=3.5 -DCMAKE_INSTALL_PREFIX:PATH=/usr -DCMAKE_INSTALL_LIBDIR="lib/" ..
+  make -j8
 }
 
 check() {
-  cd ${_pkgname}/${BUILD_DIR}
+  cd ${_pkgname}-${pkgver}/${BUILD_DIR}
   make ARGS+="--output-on-failure" test
 }
 
 package() {
-  cd ${_pkgname}/${BUILD_DIR}
+  cd ${_pkgname}-${pkgver}/${BUILD_DIR}
   make DESTDIR="${pkgdir}/" install
   mv ${pkgdir}/usr/lib/qt5/ ${pkgdir}/usr/lib/qt/
 }
