--- a/persistent-cache-cpp/PKGBUILD
+++ b/persistent-cache-cpp/PKGBUILD
@@ -1,9 +1,9 @@
 # Maintainer: Ivan Semkin (ivan at semkin dot ru)
 
-pkgname=persistent-cache-cpp-git
+pkgname=persistent-cache-cpp
 _pkgname=persistent-cache-cpp
-pkgver=r125.1.0.5.r7.gb93792f
-pkgrel=1
+pkgver=1.0.7
+pkgrel=0
 pkgdesc='A cache of key-value pairs with persistent storage for C++'
 url='https://gitlab.com/ubports/core/lib-cpp/persistent-cache-cpp'
 arch=(x86_64 i686 armv7h aarch64)
@@ -12,24 +12,33 @@ conflicts=(persistent-cache-cpp)
 provides=(persistent-cache-cpp)
 depends=(boost leveldb valgrind)
 makedepends=(git cmake cmake-extras doxygen graphviz lcov gcovr gtest gmock)
-source=("git+https://gitlab.com/ubports/core/lib-cpp/persistent-cache-cpp.git"
-        "0001-Add-missing-array-includes.patch")
-sha256sums=('SKIP'
-            '0b88e744ad60335b22e848a6ce05b929e7ddcb1ae97fb3aac2406303a191887f')
+source=(
+  "https://gitlab.com/ubports/development/core/lib-cpp/persistent-cache-cpp/-/archive/1.0.7/persistent-cache-cpp-1.0.7.tar.gz"
+  "0002-tests-add-iomanip-to-speed_test.patch"
+)
+sha256sums=(
+  'SKIP'
+  'SKIP'
+)
 
-pkgver() {
-  cd ${_pkgname}
-  echo "r$(git rev-list --count HEAD).$(git describe --always)" | sed 's/\([^-]*-g\)/r\1/;s/-/./g'
-}
+# pkgver() {
+#   cd ${_pkgname}
+#   echo "r$(git rev-list --count HEAD).$(git describe --always)" | sed 's/\([^-]*-g\)/r\1/;s/-/./g'
+# }
 
 build() {
-  cd ${_pkgname}
-  cmake -DCMAKE_INSTALL_PREFIX:PATH=/usr .
+  cd ${_pkgname}-${pkgver}
+  cmake -DCMAKE_POLICY_VERSION_MINIMUM=3.5 \
+        -DCMAKE_INSTALL_PREFIX:PATH=/usr \
+        -DCMAKE_CXX_STANDARD=17 \
+        -DCMAKE_CXX_STANDARD_REQUIRED=ON \
+        -DBUILD_TESTING=OFF \
+        .
   make
 }
 
 prepare() {
-    cd ${_pkgname}
+    cd ${_pkgname}-${pkgver}
     for i in "${srcdir}/"*.patch; do
         patch -Np1 -i "$i"
     done
@@ -41,7 +50,7 @@ prepare() {
 #}
 
 package() {
-  cd ${_pkgname}
+  cd ${_pkgname}-${pkgver}
   make DESTDIR="${pkgdir}/" install
 }
 # vim:set ts=2 sw=2 et:
