--- a/qtmir-git/PKGBUILD
+++ b/qtmir-git/PKGBUILD
@@ -4,7 +4,7 @@ pkgbase=qtmir-git
 pkgname=(qtmir-git)
 _pkgname=qtmir
 pkgver=r2920.0.7.2.r126.gca9e9a26
-pkgrel=1
+pkgrel=2
 url='https://gitlab.com/ubports/development/core/qtmir'
 arch=(x86_64 i686 armv7h aarch64)
 license=(LGPL)
@@ -13,24 +13,10 @@ provides=(qtmir)
 depends=(qt5-base qt5-quickcontrols qt5-sensors mir process-cpp lomiri-app-launch-git gsettings-qt libqtdbustest-git libqtdbusmock-git lomiri-url-dispatcher-git glm valgrind)
 makedepends=(git cmake cmake-extras gtest)
 source=('git+https://gitlab.com/ubports/development/core/qtmir.git#branch=personal/sunweaver/debian-upstream'
-        '0002_src-modules-Re-introduce-lost-workaround-for-font-re.patch'
-        '0009_src-modules-Add-header-for-getpid.patch'
-        '0011_src-platforms-Wrap-window-activity-change-in-a-try-c.patch'
-        '0012_src-modules-Partial-revert-of-e73ef71622ad3202b77bf6.patch'
-        '0022_modules-MirSurface-try-to-let-Mir-forceClose-dead-su.patch'
-        '2002_no-requires-provides-check.patch'
-        '2003_disable-benchmarks.patch'
-        '3001_link-freetype-harfbuzz.patch'
+        '3001_link-freetype-harfbuzz-add-qt5mir2server.patch'
 )
 sha256sums=('SKIP'
-            'SKIP'
-            'SKIP'
-            'SKIP'
-            'SKIP'
-            'SKIP'
-            'SKIP'
-            'SKIP'
-            'SKIP'
+            '8dfafa6d84ad48cd8f7d056e8e078e7565c9bd5abe1abdbea68c498a5888a51d'
 )
 
 BUILDENV+=('!check')
@@ -39,8 +25,8 @@ BUILD_DIR=build
 
 prepare() {
   cd ${_pkgname}
-  # apply 3001_link-freetype-harfbuzz.patch
-  patch -p1 < ../3001_link-freetype-harfbuzz.patch
+  # TODO: See if this patch should be applied upstream
+  patch -p1 < ../3001_link-freetype-harfbuzz-add-qt5mir2server.patch
 }
 
 pkgver() {
