--- a/lomiri-app-launch-git/PKGBUILD
+++ b/lomiri-app-launch-git/PKGBUILD
@@ -4,12 +4,12 @@ pkgbase=lomiri-app-launch
 pkgname=(lomiri-app-launch-git)
 _pkgname=lomiri-app-launch
 pkgver=r3207.0.1.12
-pkgrel=1
+pkgrel=2
 pkgdesc='Session init system job for Launching Applications'
 url='https://github.com/ubports/ubuntu-app-launch'
 arch=(x86_64 i686 armv7h aarch64)
 license=(GPL)
-depends=(zeitgeist gobject-introspection lttng-ust lomiri-api-git properties-cpp curl click-git)
+depends=(qt5-wayland zeitgeist gobject-introspection lttng-ust lomiri-api-git properties-cpp curl click-git)
 makedepends=(git cmake  cmake-extras dbus-test-runner gmock lcov gcovr)
 source=('git+https://gitlab.com/ubports/development/core/lomiri-app-launch.git')
 sha256sums=('SKIP')
@@ -27,7 +27,7 @@ pkgver() {
 
 build() {
   cd ${_pkgname}
-  cmake -DLOMIRI_APP_LAUNCH_ARCH="arm64" -DENABLE_MIRCLIENT=false -DCMAKE_INSTALL_PREFIX:PATH=/usr -DCMAKE_INSTALL_LIBDIR="lib/" -DCMAKE_INSTALL_LIBEXECDIR="lib/" .
+  cmake -DUSE_SYSTEMD=true -DENABLE_MIRCLIENT=false -DLOMIRI_APP_LAUNCH_ARCH=lib -DCMAKE_INSTALL_PREFIX:PATH=/usr -DCMAKE_INSTALL_LIBDIR="lib/" -DCMAKE_INSTALL_LIBEXECDIR="lib/" .
   make
 }
 
