--- a/lomiri-sounds/PKGBUILD
+++ b/lomiri-sounds/PKGBUILD
@@ -3,11 +3,12 @@
 pkgname=(lomiri-sounds)
 _pkgname=lomiri-sounds
 pkgver=25.01
-pkgrel=0
+pkgrel=1
 pkgdesc="Ringtones and notification tones for Lomiri"
 arch=('any')
 url="https://github.com/ubports/ubuntu-touch-sounds"
 license=('CC0' 'CC-BY-3.0' 'CC-BY-SA-3.0' 'CC-BY-4.0')
+makedepends=('cmake')
 source=('https://gitlab.com/ubports/development/core/lomiri-sounds/-/archive/25.01/lomiri-sounds-25.01.tar.gz')
 md5sums=('SKIP')
 
@@ -16,8 +17,14 @@ md5sums=('SKIP')
 #   printf "r%s.%s" "$(git rev-list --count HEAD)" "$(git rev-parse --short HEAD)"
 # }
 
+build() {
+  cmake -S "${_pkgname}-${pkgver}" -B build \
+    -DCMAKE_BUILD_TYPE=Release \
+    -DCMAKE_INSTALL_PREFIX=/usr \
+    -DCMAKE_INSTALL_LIBDIR=lib
+  cmake --build build
+}
+
 package() {
-  cd ${_pkgname}-$pkgver
-  mkdir -p ${pkgdir}/usr
-  cp -a share ${pkgdir}/usr
+  DESTDIR="${pkgdir}" cmake --install build
 }
