--- a/ayatana-indicator-datetime/PKGBUILD
+++ b/ayatana-indicator-datetime/PKGBUILD
@@ -3,13 +3,13 @@
 pkgname="ayatana-indicator-datetime"
 _pkgname="ayatana-indicator-datetime"
 pkgver=25.4.0
-pkgrel=0
+pkgrel=1
 pkgdesc="Ayatana Indicator providing clock and calendar"
 arch=("i686" "x86_64" "aarch64")
 url="https://github.com/AyatanaIndicators"
 license=("GPL3")
-depends=("glib2" "evolution-data-server" "libaccounts-glib" "properties-cpp")
-makedepends=("gsettings-qt" "glib2-devel" "ayatana-indicator-messages" "libayatana-common" "cmake" "cmake-extras" "dbus" "intltool" "glib2" "libnotify" "gstreamer" "libical" "evolution-data-server" "gsettings-desktop-schemas" "evolution-data-server" "git")
+depends=("glib2" "evolution-data-server" "libaccounts-glib" "properties-cpp" "libayatana-common")
+makedepends=("mkcal" "lomiri-sounds" "kcalendarcore5" "extra-cmake-modules" "gsettings-qt" "glib2-devel" "ayatana-indicator-messages" "cmake" "cmake-extras" "dbus" "intltool" "glib2" "libnotify" "gstreamer" "libical" "evolution-data-server" "gsettings-desktop-schemas" "evolution-data-server" "git")
 optdepends=("mate-ayatana-indicator-applet" "geoclue")
 source=("https://github.com/AyatanaIndicators/ayatana-indicator-datetime/archive/refs/tags/25.4.0.tar.gz"
        )
@@ -26,7 +26,7 @@ options=("!emptydirs")
 build()
 {
     cd ${_pkgname}-${pkgver}
-    cmake -DCMAKE_INSTALL_PREFIX=/usr -DCMAKE_INSTALL_LIBEXECDIR=lib -Denable_tests=OFF
+    cmake -DENABLE_LOMIRI_FEATURES=ON -DCMAKE_INSTALL_PREFIX=/usr -DCMAKE_INSTALL_LIBEXECDIR=lib -Denable_tests=OFF
     make
 }
 
